k8s/ekart-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ekart-ingress
  namespace: ekart-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /ekart
          pathType: Prefix
          backend:
            service:
              name: ekart-service
              port:
                number: 8070
