k8s/ekart.yml

apiVersion: v1
kind: Namespace
metadata:
  name: ekart-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ekart-deployment
  namespace: ekart-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ekart-app 
  template:
    metadata:
      labels:
        app: ekart-app
    spec:
      containers:
        - name: ekart-container 
          image: g0u74m/ekart-java-webapp:latest
          ports:
            - containerPort: 8070
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8070
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet: 
              path: /
              port: 8070
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: ekart-service
  namespace: ekart-ns
spec:
  selector:
    app: ekart-app
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070
      nodePort: 30003
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ekart-ingress
  namespace: ekart-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
        - path: /ekart(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: ekart-service
              port:
                number: 8070
